libdiscover/backends/PackageKitBackend/PackageKitDependencies.h
@@ -1,5 +1,6 @@
 /*
  *   SPDX-FileCopyrightText: 2024 ivan tkachenko <me@ratijas.tk>
+ *   SPDX-FileCopyrightText: 2024 Harald Sitter <sitter@kde.org>
  *
  *   SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
  */
@@ -58,7 +59,8 @@ public:
     QString packageId() const;
     void setPackageId(const QString &packageId);
 
-    QList<PackageKitDependency> dependencies();
+    [[nodiscard]] bool hasFetchedDependencies();
+    [[nodiscard]] QList<PackageKitDependency> dependencies();
 
     void refresh();
 
